tests/algorithms/x/Elixir/graphs/deep_clone_graph.error
parse: error[P001]: /workspace/mochi/tests/github/TheAlgorithms/Mochi/graphs/deep_clone_graph.mochi:33:9: unexpected token "var" (expected "}")
  --> /workspace/mochi/tests/github/TheAlgorithms/Mochi/graphs/deep_clone_graph.mochi:33:9

 33 |         var result: Node = Nil
    |         ^

help:
  Check for a missing `{` or `}` to close the block.